<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_file"
        android:icon="@drawable/white_discard"
        android:onClick="delete"
        android:orderInCategory="15"
        app:showAsAction="never"
        android:title="@string/delete_confirmation"/>
    <item
        android:id="@+id/edit"
        android:icon="@drawable/white_edit"
        android:onClick="swapViews"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/edit"/>
    <item
        android:id="@+id/audio_clip"
        android:icon="@drawable/white_audio"
        android:onClick="listenAudio"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"
        android:title="@string/old_recording"/>
    <item
        android:id="@+id/add_audio"
        android:icon="@drawable/mic"
        android:onClick="addAudio"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"
        android:title="@string/new_recording"/>
    <item
        android:id="@+id/shareMenuItem"
        android:onClick="shareFromMenuItem"
        android:orderInCategory="8"
        app:showAsAction="never"
        android:title="@string/share">
    </item>
    <item
        android:id="@+id/changeTimeMenuItem"
        android:onClick="changeTimeMenu"
        android:orderInCategory="9"
        app:showAsAction="never"
        android:title="@string/modify_date"/>
    <item
        android:id="@+id/rename_files"
        android:onClick="renameFiles"
        android:orderInCategory="8"
        app:showAsAction="never"
        android:title="@string/rename_files"/>

</menu>