<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/audioInNewEntry"
        android:icon="@drawable/white_audio"
        android:onClick="messWithAudio"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"
        android:title="@string/old_recording">
    </item>
    <item
        android:id="@+id/accept"
        android:icon="@drawable/white_accept"
        android:onClick="save"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/ok">
    </item>
    <item
        android:id="@+id/delete_file"
        android:icon="@drawable/white_discard"
        android:onClick="deleteClicked"
        android:orderInCategory="9"
        app:showAsAction="never"
        android:title="@string/delete_confirmation"/>
    <item
        android:id="@+id/audioMenuItem"
        android:icon="@drawable/mic"
        android:onClick="addAudioFromMenuItem"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/new_recording">
    </item>
    <item
        android:id="@+id/shareMenuItem"
        android:onClick="shareFromMenuItem"
        android:orderInCategory="8"
        app:showAsAction="never"
        android:title="@string/share">
    </item>

</menu>