<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/new_entry_Favs"
        android:icon="@drawable/add_new"
        android:onClick="newEntry"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/new_entry"/>
    <item
        android:id="@+id/new_note"
        android:icon="@drawable/white_note"
        android:onClick="newNote"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/new_note"/>
    <item
        android:id="@+id/settings"
        android:onClick="settingsClicked"
        android:orderInCategory="9"
        android:showAsAction="never"
        android:title="@string/SETTINGS"/>
    <item
        android:id="@+id/feedback"
        android:onClick="feedback"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/feedback"/>
    <item
        android:id="@+id/donation"
        android:onClick="donation"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/donate"/>

</menu>