<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/welcome"
        android:textColor="#333"
        android:textSize="22sp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="2dp"
                android:textColor="#333"
                android:text="@string/welcome_subtext"

                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:lineSpacingExtra="2dp"
                android:textSize="14sp"
                android:paddingTop="20dp"
                android:textColor="#333"
                android:text="@string/intro_entries" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:lineSpacingExtra="2dp"
                android:textColor="#333"
                android:textSize="14sp"
                android:paddingTop="15dp"
                android:text="@string/intro_notes" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:lineSpacingExtra="2dp"
                android:textColor="#333"
                android:textSize="14sp"
                android:text="@string/intro_pics" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:textColor="#333"
                android:lineSpacingExtra="2dp"
                android:textSize="14sp"
                android:text="@string/intro_tags" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:lineSpacingExtra="2dp"
                android:textColor="#333"
                android:textSize="14sp"
                android:text="@string/intro_location" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:lineSpacingExtra="2dp"
                android:paddingTop="5dp"
                android:textColor="#333"
                android:textSize="14sp"
                android:text="Dropbox backup take your notes, entries and photos in the cloud. This means that all your
devices are able to see and edit your data that have the app installed. No in-app purchase required." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColor="#333"
                android:textSize="14sp"
                android:text="@string/intro_rate" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/beta"
                android:textColor="#333"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>