<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/DONATION_AND_ADS"
        android:textColor="#333"
        android:textSize="22sp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/donation_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:lineSpacingExtra="2dp"
                android:textSize="14sp"
                android:text="@string/donation_explanation"
                android:textColor="#333"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textColorLink="@color/UIPink" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@color/UIOrange"
                android:onClick="baseDonation"
                android:padding="10dp"
                android:text="@string/donation_button"
                android:textColor="@color/UILightForeground"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/inapp_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#333"
                android:lineSpacingExtra="2dp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:text="@string/remove_ads_explanation" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@color/UIBlue"
                android:onClick="removeAds"
                android:padding="10dp"
                android:text="Remove Ads"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="#000000"
                android:layout_marginBottom="5dp"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>